--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 GlobalDefaultGameMode=/Script/CardGame.WidgetGameMode
+GameInstanceClass=/Game/CardGameGameInstanceBP.CardGameGameInstanceBP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
@@ -10,3 +11,5 @@ AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
+[OnlineSubsystem]
+DefaultPlatformService=Null
