Added the module for a loading screen, which in turn will allow for image placement in UI eventually.

--- a/CardGame.uproject
+++ b/CardGame.uproject
@@ -4,14 +4,22 @@
 	"Category": "",
 	"Description": "",
 	"Modules": [
-		{
-			"Name": "CardGame",
+    {
+      "Name": "CardGame",
+      "Type": "Runtime",
+      "LoadingPhase": "Default",
+      "AdditionalDependencies": [
+        "Engine"
+      ]
+    },
+    {
+      "Name": "LoadingCardGame",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine"
-			]
-		}
+      "LoadingPhase": "PreLoadingScreen",
+            "AdditionalDependencies": [
+        "Engine"
+      ]
+    }
 	],
 	"Plugins": [
 		{
