--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 GlobalDefaultGameMode=/Script/CardGame.WidgetGameMode
-GameInstanceClass=/Script/CardGame.CardGameGameInstance
+GameInstanceClass=/Game/C++ClassExtensions/CardGameGameInstanceBP.CardGameGameInstanceBP_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
