--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,6 +1,6 @@
 [URL]
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
+EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default.Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
 GlobalDefaultGameMode=/Script/CardGame.WidgetGameMode
 GameInstanceClass=/Game/C++ClassExtensions/CardGameGameInstanceBP.CardGameGameInstanceBP_C
